--- a/src/Components/Navbar/navbar.html
+++ b/src/Components/Navbar/navbar.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav-links">
         <img id="clickableImage" src="../Navbar/Assets/acm_logo.png" alt="logo">
-        <li style="margin-left: auto;"><a href="../../../public/home.html" target="_top">Home</a></li>
+        <li style="margin-left: auto;"><a href="../../../public/index.html" target="_top">Home</a></li>
         <li class="center"><a href="../../Pages/About/about.html" target="_top">About</a></li>
         <li class="center"><a href="../../Pages/Team/team.html" target="_top">Team</a></li>
         <li class="center"><a href="#">Events ▼</a>
@@ -25,7 +25,7 @@
 
     <script>
         const image = document.getElementById('clickableImage');
-        const targetUrl = "../../../public/home.html";
+        const targetUrl = "../../../public/index.html";
 
         image.addEventListener('click', function () {
             if (window.parent) {
