--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .wel {
-    color: #a3dee3;
+    color: #5fbac2;
     font-family: 'Poppins', arial;
     font-size: 2.5em;
     font-weight: 1000;
@@ -21,7 +21,7 @@ body {
 }
 
 .acm {
-    color: #a3dee3;
+    color: #5fbac2;
     font-family: 'Poppins', arial;
     font-size: 8.5em;
     font-weight: 1000;
@@ -30,7 +30,7 @@ body {
 }
 
 .tag {
-    color: #a3dee3;
+    color: #5fbac2;
     font-family: 'Poppins', arial;
     font-size: 2em;
     font-weight: 1000;
@@ -62,7 +62,7 @@ body {
 }
 
 .title{
-    color: #a3dee3;
+    color: #5fbac2;
     font-family: 'Poppins', arial;
     font-weight: 1000;
     margin: auto;
