--- a/src/Components/Card/card.html
+++ b/src/Components/Card/card.html
@@ -11,12 +11,10 @@
 <body>
    <div class="wrapper">
       <div class="card front-face">
-         <img
-            src="https://images.unsplash.com/photo-1492288991661-058aa541ff43?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
+         <img id="front-image" src="" alt="img">
       </div>
       <div class="card back-face">
-         <img
-            src="https://images.unsplash.com/photo-1492288991661-058aa541ff43?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80">
+         <img id="back-image" src="">
          <div class="info">
             <div class="title" id="card-name">
                {{name}}
@@ -42,6 +40,8 @@
       const inlink = urlParams.get('inlk');
       const twlink = urlParams.get('twlk');
       const lilink = urlParams.get('lilk');
+      const frontImage = urlParams.get('frontImage');
+      const backImage = urlParams.get('backImage');
 
       document.getElementById('card-name').textContent = name || 'Default Name';
       document.getElementById('card-description').textContent = description || 'Default Description';
@@ -49,7 +49,8 @@
       document.getElementById('tw-lk').href = twlink || 'Default Description';
       document.getElementById('in-lk').href = inlink || 'Default Description';
       document.getElementById('li-lk').href = lilink || 'Default Description';
-
+      document.getElementById('front-image').src = frontImage || ''; // Set front image source
+      document.getElementById('back-image').src = backImage || ''; // Set back image source
 
    </script>
 
