--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -11,7 +11,7 @@ footer{
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(180deg, #1c6ceb 40%, yellow);
+    background: linear-gradient(180deg, #757a81 40%, rgb(221, 221, 220));
     height: auto;
     width: 100vw;
     font-family: "Open Sans";
