--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -96,3 +96,26 @@ footer{
 .pic_para{
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .footer-bottom p{
+        font-size: 10px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+        color: #fff;
+    }    
+    .row{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 5px;
+    }
+    .pic {
+        display: block;
+        margin: 0 auto;
+        width: 30px;
+    }
+    .pic_para{
+        text-align: center;
+        font-size: 10px;
+    }
+}
