--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -101,3 +101,75 @@ body {
   border-radius: 20px;
 
 }
+
+@media only screen and (max-width: 600px) {  
+  .nav-links {
+    display: flex;
+    align-items: center;
+    padding: 20px 15px;
+    margin-top: 85px;
+    margin-right: 10px;
+    margin-left: 10px;
+    border: white solid;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    background-color: #000;
+  }
+  
+  .nav-links img {
+    display: block;
+    height: 25px;
+    width: 25px;
+    margin-left: 0;
+  }
+  
+  .nav-links li a {
+    position: relative;
+    color: #fff;
+    font-size: 8px;
+    font-weight: 500;
+    padding: 6px 0;
+    text-decoration: none;
+    
+  }
+  
+  .nav-links li a:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 0%;
+    background: #34efdf;
+    border-radius: 12px;
+    transition: all 0.4s ease;
+  }
+  
+  /* Add this CSS to your navbar.css */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000;
+    min-width: 110px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: #fff;
+    padding: 5px 4px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    border-radius: 20px;
+    transform: 5s ease-in-out;
+  }
+  
+  .nav-links li:hover .dropdown-content {
+    display: block;
+    border-radius: 15px;
+  }
+}
