--- a/src/Components/Footer/footer.html
+++ b/src/Components/Footer/footer.html
@@ -13,7 +13,7 @@
     <footer>
         <div class="row">
             <div class="left">
-                <img class="pic" src="../Footer/Assets/acm_logo.png" width="80px" alt="acm_logo">
+                <img class="pic" src="../Footer/Assets/lg.png" width="90px" alt="acm_logo">
                 <p class="pic_para">Association of Computer Machinery<br>
                     BVP DET NM</p>
             </div>
