--- a/src/Components/Navbar/navbar.html
+++ b/src/Components/Navbar/navbar.html
@@ -9,8 +9,8 @@
 
 <body>
     <div class="nav-links">
-        <img id="clickableImage" src="../Navbar/Assets/acm_logo.png" alt="logo">
-        <li style="margin-left: auto;"><a href="../../../index.html" target="_top">Home</a></li>
+        <img id="clickableImage" src="../Navbar/Assets/lg2.png" alt="logo">
+        <li style="margin-left: auto;"><a href="../../../public/index.html" target="_top">Home</a></li>
         <li class="center"><a href="../../Pages/About/about.html" target="_top">About</a></li>
         <li class="center"><a href="../../Pages/Team/team.html" target="_top">Team</a></li>
         <li class="center"><a href="#">Events ▼</a>
@@ -20,9 +20,10 @@
             </div>
         </li>
         <li class="center"><a href="../../Pages/Gallery/gallery.html" target="_top">Gallery</a></li>
+        <li class="center"><a href="#" target="_blank">Newsletter</a></li>
         <li class="center"><a href="../../Pages/Contact/contact.html" target="_top">Contact Us</a></li>
     </div>
-
+    
     <script>
         const image = document.getElementById('clickableImage');
         const targetUrl = "../../../index.html";
