--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -11,12 +11,12 @@ footer{
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(180deg, #757a81 40%, rgb(221, 221, 220));
+    background: linear-gradient(180deg, #53565b 40%, rgb(221, 221, 220));
     height: auto;
     width: 100vw;
     font-family: "Open Sans";
     padding-top: 10px;
-    color: #000;
+    color: #000;    
     
 }
 .footer-content{
