--- a/src/Components/Testimonial/testimonial.css
+++ b/src/Components/Testimonial/testimonial.css
@@ -19,7 +19,7 @@ body {
 }
 
 .testimonial-card {
-  min-height: 400px;
+  min-height: 300px;
   width: 350px;
   background-color: white;
   border-radius: 10px;
@@ -31,7 +31,7 @@ body {
 }
 
 .text {
-  padding: 2.2em;
+  padding: 1.5em;
   line-height: 1.7em;
   position: relative;
   font-size: 18px;
@@ -39,11 +39,11 @@ body {
 
 .image {
   background-color: tomato;
-  height: 120px;
-  width: 120px;
+  height: 110px;
+  width: 110px;
   border-radius: 50%;
   border: 5px solid white;
-  background: no-repeat center/cover url(https://images.unsplash.com/photo-1563715992566-7ad5cf5b71d3?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+  background: no-repeat center/cover;
   position: absolute;
   top: -50%;
   left: 50%;
@@ -55,7 +55,7 @@ body {
 
 .footer {
   background: linear-gradient(375deg, #157dd1, #15d131);
-  height: 140px;
+  height: 120px;
   border-radius: 0 0 10px 10px;
   position: relative;
 
