--- a/src/Components/Testimonial/testimonial.html
+++ b/src/Components/Testimonial/testimonial.html
@@ -13,7 +13,8 @@
         <div class="testimonial-card">
             <div class="text" id="text">{{description}} <i class="fas fa-quote-right quote"></i></div>
             <div class="footer">
-                <div class="image">
+                <div>
+                    <img class="image" src="" id="image" alt="img">
                 </div>
                 <h3 class='person' id="person">{{name}}</h3>
             </div>
@@ -24,9 +25,13 @@
         const urlParams = new URLSearchParams(window.location.search);
         const nm = urlParams.get('name');
         const des = urlParams.get('description');
+        const pic = urlParams.get('pic');
+
 
         document.getElementById('person').textContent = nm || 'Default Name';
         document.getElementById('text').textContent = des || 'Default Description';
+        document.getElementById('image').src = pic || 'Default Description';
+
     </script>
 </body>
 
