--- a/src/Pages/Team/team.css
+++ b/src/Pages/Team/team.css
@@ -6,13 +6,12 @@ body{
     margin-bottom: 0;
     margin-right: 0;
     margin-left: 0;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: linear-gradient(180deg, #d2d2d2 40%, rgb(41, 41, 41));
+
 }
 
 .title{
-    color: #57b7bf;
+    color: #070450;
     font-family: 'Poppins', arial;
     font-size: 2.5em;
     font-weight: 1000;
@@ -30,4 +29,12 @@ body{
 
 .spacer {
     margin-bottom: 60px;
+}
+
+@media only screen and (max-width: 600px) {
+    .row {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+       
+    }
 }
