--- a/src/Components/Footer/footer.html
+++ b/src/Components/Footer/footer.html
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>ACM SC BVPDET-NM copyright &copy; 2023</p>
+            <p>ACM SC BVDUDET-NM copyright &copy; 2023</p>
         </div>
     </footer>
 </body>
