--- a/src/Components/Testimonial/testimonial.css
+++ b/src/Components/Testimonial/testimonial.css
@@ -54,7 +54,7 @@ body {
 }
 
 .footer {
-  background: linear-gradient(375deg, #157dd1, #15d131);
+  background: linear-gradient(375deg, #070450, #15d131);
   height: 120px;
   border-radius: 0 0 10px 10px;
   position: relative;
