--- a/src/Components/Event/event.css
+++ b/src/Components/Event/event.css
@@ -15,7 +15,9 @@ body{
     background-color: #f8f9fa;
     height: 190px;
     border-radius: 5px;
-    padding: 20px;
+    padding: 15px;
+    border: 5px solid #070450;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .event h3 {
