--- a/src/Pages/Gallery/gallery.css
+++ b/src/Pages/Gallery/gallery.css
@@ -5,3 +5,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.stk{
+    position: sticky;
+    top: 1px;
+    z-index: 99999;
+}
