--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -20,6 +20,12 @@ body {
     background-size: cover;
 }
 
+.stk{
+    position: sticky;
+    top: 1px;
+    z-index: 99999;
+}
+
 .wel {
     color: #070450;
     font-family: 'Roboto Slab', serif;
@@ -99,7 +105,7 @@ body {
 @media only screen and (max-width: 600px) {
     .wel {
         color: #070450;
-        font-family: 'Poppins', arial;
+        font-family: 'Roboto Slab', serif;
         font-size: 0.8em;
         font-weight: 1000;
         margin: auto;
@@ -109,7 +115,7 @@ body {
     .acm {
         color: #070450;
         text-align: center;
-        font-family: 'Poppins', arial;
+        font-family: 'Roboto Slab', serif;
         font-size: 4em;
         font-weight: 1000;
         margin: auto;
@@ -118,7 +124,7 @@ body {
 
     .tag {
         color: #070450;
-        font-family: 'Poppins', arial;
+        font-family: 'Roboto Slab', serif;
         font-size: 0.8em;
         font-weight: 1000;
         margin: auto;
@@ -145,7 +151,7 @@ body {
 
     .title {
         color: #070450;
-        font-family: 'Poppins', arial;
+        font-family: 'Roboto Slab', serif;
         font-weight: 1000;
         margin: auto;
         font-size: 2em;
