--- a/src/Pages/Team/team.css
+++ b/src/Pages/Team/team.css
@@ -12,6 +12,12 @@ body{
     background-size: cover;
 }
 
+.stk{
+    position: sticky;
+    top: 1px;
+    z-index: 99999;
+}
+
 .title{
     color: #070450;
     font-family: 'Roboto Slab', serif;
