--- a/src/Components/Event/event.css
+++ b/src/Components/Event/event.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Roboto Slab', serif;
     max-width: 1200px;
     margin: 0 auto;
@@ -37,14 +37,45 @@ body{
     justify-content: center;
 }
 
-.rw-img{
+.rw-img {
     flex: 10%;
 }
 
-.inner{
+.inner {
     flex: 80%;
 }
 
-.rw-des{    
+.rw-des {
     font-weight: 100;
+}
+
+@media only screen and (max-width: 600px) {
+    .event {
+        background-color: #f8f9fa;
+        height: auto;
+        border-radius: 5px;
+        padding: 15px;
+        border: 5px solid #070450;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .rw-img {
+        margin-bottom: 10px;
+    }
+
+    .inner {
+        text-align: center;
+    }
+
+    #ev-img {
+        max-width: 100%;
+        height: auto;
+    }
 }
