--- a/src/Pages/Team/team.css
+++ b/src/Pages/Team/team.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
-
 *{
     text-align: center;
 }
@@ -8,19 +6,14 @@ body{
     margin-bottom: 0;
     margin-right: 0;
     margin-left: 0;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.stk{
-    position: sticky;
-    top: 1px;
-    z-index: 99999;
-}
-
 .title{
     color: #070450;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Poppins', arial;
     font-size: 2.5em;
     font-weight: 1000;
     margin: auto;
@@ -38,6 +31,26 @@ body{
 .spacer {
     margin-bottom: 60px;
 }
+
+.team-button {
+    font-family: 'Poppins', arial;
+    font-weight: 800;
+    background-color: #070450;
+    color: white;
+    border: none;
+    height: 8vh;
+    width: 18vh;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+}
+
+.team-button:hover {
+    background-color: #3498db;
+}
+
 
 @media only screen and (max-width: 600px) {
     .row {
