--- a/src/Components/TeamsperYear/tm.html
+++ b/src/Components/TeamsperYear/tm.html
@@ -37,7 +37,7 @@
         </div>
         <div>
             <iframe
-                src="../Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Shivam Bhosle.jpg&backImage=/src/Components/TeamsperYear/team23-24/Shivam Bhosle.jpg"
+                src="../Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Aviral Dev.png&backImage=/src/Components/TeamsperYear/team23-24/Aviral Dev.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -52,7 +52,7 @@
         </div>
         <div>
             <iframe
-                src="../Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Nishtha Yadav.jpg&backImage=/src/Components/TeamsperYear/team23-24/Nishtha Yadav.jpg"
+                src="../Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Nishtha Yadav.png&backImage=/src/Components/TeamsperYear/team23-24/Nishtha Yadav.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -82,12 +82,12 @@
     <div class="row">
         <div>
             <iframe
-                src="../Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Shivam Bhosle.jpg&backImage=/src/Components/TeamsperYear/team23-24/Shivam Bhosle.jpg"
+                src="../Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/TeamsperYear/team23-24/Saloni Wani.png&backImage=/src/Components/TeamsperYear/team23-24/Saloni Wani.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://github.com/khushiiraj&lilk=https://www.linkedin.com/in/khushi-raj-091264241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Components/TeamsperYear/team23-24/Khushi Raj.png&backImage=/src/Components/TeamsperYear/team23-24/Khushi Raj.png"
+                src="../Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://github.com/khushiiraj&lilk=https://www.linkedin.com/in/khushi-raj-091264241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Components/TeamsperYear/team23-24/Khushi Raj.jpg&backImage=/src/Components/TeamsperYear/team23-24/Khushi Raj.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
