Modified Teams page

--- a/src/Components/Footer/footer.html
+++ b/src/Components/Footer/footer.html
@@ -27,12 +27,12 @@
 
         <div class="footer-content">
             <ul class="socials">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-google"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=61551739091204&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter" target="_blank"></i></a></li>
+                <li><a href="#"><i class="fa fa-google" target="_blank"></i></a></li>
+                <li><a href="https://www.youtube.com/@ACMBVDUDET/about" target="_blank"><i class="fa fa-youtube" ></i></a></li>
+                <li><a href="https://www.linkedin.com/in/acm-bvdudet-364009294/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram" target="_blank"></i></a></li>
             </ul>
         </div>
         <div class="footer-bottom">
