--- a/src/Components/TeamsperYear/tm.css
+++ b/src/Components/TeamsperYear/tm.css
@@ -6,6 +6,36 @@
     justify-content: center;
 }
 
+.title{
+    text-align: center;
+    color: #070450;
+    font-family: 'Poppins', arial;
+    font-size: 2.5em;
+    font-weight: 1000;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.team-button {
+    align-items: center;
+    font-family: 'Poppins', arial;
+    font-weight: 600;
+    background-color: #070450;
+    color: white;
+    border: none;
+    height: 2vh;
+    width: 5vh;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 25px;
+    transition: background-color 0.3s;
+}
+
+.team-button:hover {
+    background-color: #3498db;
+}
+
 .spacer {
     margin-bottom: 60px;
 }
