--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -23,7 +23,7 @@ body {
   margin-top: 100px;
   margin-right: 20px;
   margin-left: 20px;
-  border: white solid;
+  border: #070450 solid;
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   background-color: #070450;
